Fix desktop nav flash on mobile load

--- a/src/styles/header.styl
+++ b/src/styles/header.styl
@@ -364,6 +364,9 @@
                 font-size 22px
 
 @media screen and (max-device-width: 700px)
+    .masthead .desktop-nav
+        display none
+
     .back
         bottom 45px
         right 20px
